fixed all allignment issues on IOS

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -460,7 +460,7 @@ vertical-align: bottom;
 // }
 
 .ios-fix{
-    display: block;
+    display: block !important;
 }
 
 bh-landingpage{
